--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,20 +1,44 @@
-body{
-  font-family: sans-serif;
-  font-size:100%;
-  background-color: #FCF7F8;
-      }
+.main {
+  display: flex;
+  flex-direction: row;
+  overflow: unset;
+}
 
 header {
   text-align: center;
   color:#FCF7F8;
   background-color: #343330;
+  justify-content: center;
         }
 
+body{
+  font-family: sans-serif;
+  font-size:100%;
+  background-color: #FCF7F8;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem;
+      }
+    
 footer {
   background-color: #343330;
   text-align: center;
   color: white;
         }
+
+#heading {
+  font-family: sans-serif;
+  background-color: #343330;
+  padding: 1rem;
+  color: white;
+          }
+
+#profilephoto {
+  width: 15%;
+  height: 15%;
+  border-radius: 50%;
+  border: 3px solid #D1603D;
+               }
 
 #navbar {
   color: white;
@@ -27,21 +51,24 @@ footer {
 .navlist {
   list-style-type: none;
           }
+ 
+#content {
+  padding-left: 1rem;
+  width: 80%;
+  margin: 1rem;
+}  
+#devexperience {
+  padding-left: 2rem;
+}        
 
 .contacts {
   list-style: none;
-  padding: 0%;
+  padding: 1%;
+  margin: 0.5rem;
 }
-
-#profilephoto {
-  width: 15%;
-  height: 15%;
-  border-radius: 50%;
-  border: 3px solid orange;
-}
-
 .icons {
   width: 3rem;
-  margin: 0.5rem;
+  margin: 2rem;
   height: auto;
+  padding-top: 0.5rem;
 }
