--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,6 +5,8 @@
        }
 
 header {
+  font-family: sans-serif;
+  font-size: 150%;
   text-align: center;
   color:#FCF7F8;
   background-color: #343330;
@@ -21,6 +23,8 @@ body {
       }
     
 footer {
+  font-family: sans-serif;
+  font-size: 200%;
   background-color: #343330;
   text-align: center;
   color: white;
@@ -49,6 +53,7 @@ footer {
          }
 
 .navlist {
+  color: white;
   list-style-type: none;
           }
  
