--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,17 +5,13 @@
        }
 
 header {
-  font-family: sans-serif;
-  font-size: 150%;
   text-align: center;
-  color:#FCF7F8;
-  background-color: #343330;
   justify-content: center;
         }
 
 body {
   font-family: sans-serif;
-  font-size:100%;
+  font-size:110%;
   background-color: #FCF7F8;
   display: flex;
   flex-direction: column;
@@ -23,11 +19,11 @@ body {
       }
     
 footer {
-  font-family: sans-serif;
-  font-size: 200%;
+  padding: 1rem;
   background-color: #343330;
   text-align: center;
   color: white;
+  justify-content: center;
         }
 
 #heading {
@@ -58,7 +54,7 @@ footer {
           }
  
 #content {
-  padding-left: 1rem;
+  padding: 1rem;
   width: 80%;
   margin: 1rem;
           } 
@@ -79,3 +75,40 @@ footer {
   height: auto;
   padding-top: 0.5rem;
         }
+h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+      }
+
+h3 {
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+      }
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+    }
+    
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}    
