--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -111,4 +111,8 @@ ul {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 40px;
-}    
+     } 
+table {
+ border-spacing: 16px;
+ border-style: dotted;
+       }   
