--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,6 +24,7 @@ footer {
   text-align: center;
   color: white;
   justify-content: center;
+  list-style-type: none;
         }
 
 #heading {
@@ -34,10 +35,11 @@ footer {
           }
 
 #profilephoto {
-  width: 15%;
-  height: 15%;
+  display: inline-block; position: relative;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  border: 3px solid #D1603D;
+  border: 2px solid #D1603D;
                }
 
 #navbar {
@@ -64,7 +66,6 @@ footer {
                 }        
 
 .contacts {
-  list-style: none;
   padding: 1%;
   margin: 0.5rem;
            }
