--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -116,4 +116,8 @@ ul {
 table {
  border-spacing: 16px;
  border-style: dotted;
-       }   
+       } 
+   
+.imglink3 {
+  text-decoration: none !important;
+ }      
